Entrega4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM create_dirfunc ID create_id SEMICOLON declarations functions MAIN body END clean_program
Rule 2     create_dirfunc -> <empty>
Rule 3     create_id -> <empty>
Rule 4     clean_program -> <empty>
Rule 5     declarations -> vars
Rule 6     declarations -> empty
Rule 7     functions -> funcs functions
Rule 8     functions -> empty
Rule 9     vars -> VAR var_declaration var_declaration_list
Rule 10    var_declaration -> identifier_list COLON type SEMICOLON
Rule 11    identifier_list -> ID add_to_var_table identifier_list_tail
Rule 12    identifier_list_tail -> COMMA ID add_to_var_table identifier_list_tail
Rule 13    identifier_list_tail -> empty
Rule 14    add_to_var_table -> <empty>
Rule 15    var_declaration_list -> var_declaration var_declaration_list
Rule 16    var_declaration_list -> empty
Rule 17    type -> INT_TYPE current_type
Rule 18    type -> FLOAT_TYPE current_type
Rule 19    current_type -> <empty>
Rule 20    body -> LBRACES statement_list RBRACES
Rule 21    statement_list -> statement statement_list
Rule 22    statement_list -> empty
Rule 23    statement -> print_func
Rule 24    statement -> condition
Rule 25    statement -> cycle
Rule 26    statement -> RETURN expression
Rule 27    statement -> ID id_option
Rule 28    statement -> LBRACKETS statement_list RBRACKETS
Rule 29    id_option -> f_call SEMICOLON
Rule 30    id_option -> assign
Rule 31    print_func -> PRINT LPARENTESIS print_element print_element_list RPARENTESIS SEMICOLON
Rule 32    print_element -> expression
Rule 33    print_element -> CTE_STRING
Rule 34    print_element_list -> COMMA print_element print_element_list
Rule 35    print_element_list -> empty
Rule 36    assign -> EQUALS expression SEMICOLON generate_assign_quad
Rule 37    generate_assign_quad -> <empty>
Rule 38    cycle -> WHILE add_while LPARENTESIS expression RPARENTESIS add_while_false DO body SEMICOLON add_while_final_s
Rule 39    add_while -> <empty>
Rule 40    add_while_false -> <empty>
Rule 41    add_while_final_s -> <empty>
Rule 42    condition -> IF LPARENTESIS expression RPARENTESIS add_if body else_part SEMICOLON add_endif
Rule 43    else_part -> add_else ELSE body
Rule 44    else_part -> empty
Rule 45    add_if -> <empty>
Rule 46    add_else -> <empty>
Rule 47    add_endif -> <empty>
Rule 48    expression -> exp comparison
Rule 49    comparison -> GREATER add_op exp
Rule 50    comparison -> LESS add_op exp
Rule 51    comparison -> DIFFERENT add_op exp
Rule 52    comparison -> STRICT_EQUAL add_op exp
Rule 53    comparison -> empty
Rule 54    exp -> term add_sub
Rule 55    add_sub -> PLUS add_op term add_sub
Rule 56    add_sub -> MINUS add_op term add_sub
Rule 57    add_sub -> empty
Rule 58    term -> factor mult_div
Rule 59    mult_div -> TIMES add_op factor mult_div
Rule 60    mult_div -> DIVIDE add_op factor mult_div
Rule 61    mult_div -> empty
Rule 62    factor -> grouping
Rule 63    factor -> unary_sign
Rule 64    factor -> cte
Rule 65    factor -> ID id_func_option
Rule 66    id_func_option -> f_call
Rule 67    id_func_option -> empty
Rule 68    grouping -> LPARENTESIS push_paren expression RPARENTESIS close_paren
Rule 69    push_paren -> <empty>
Rule 70    close_paren -> <empty>
Rule 71    unary_sign -> PLUS value
Rule 72    unary_sign -> MINUS value
Rule 73    value -> ID
Rule 74    value -> cte
Rule 75    cte -> CTE_INT
Rule 76    cte -> CTE_FLOAT
Rule 77    funcs -> prepare_new_func funcs_type add_current_type ID add_function LPARENTESIS start_func_vars parameters RPARENTESIS LBRACES function_block RBRACES SEMICOLON end_func
Rule 78    prepare_new_func -> <empty>
Rule 79    funcs_type -> VOID
Rule 80    funcs_type -> type
Rule 81    add_current_type -> <empty>
Rule 82    add_function -> <empty>
Rule 83    start_func_vars -> <empty>
Rule 84    end_func -> <empty>
Rule 85    parameters -> parameter parameter_list
Rule 86    parameters -> empty
Rule 87    parameter -> ID COLON type
Rule 88    parameter_list -> COMMA parameter parameter_list
Rule 89    parameter_list -> empty
Rule 90    function_block -> vars body
Rule 91    function_block -> body
Rule 92    f_call -> LPARENTESIS arguments RPARENTESIS
Rule 93    arguments -> expression argument_list
Rule 94    arguments -> empty
Rule 95    argument_list -> COMMA expression argument_list
Rule 96    argument_list -> empty
Rule 97    empty -> <empty>
Rule 98    add_op -> <empty>

Terminals, with rules where they appear

COLON                : 10 87
COMMA                : 12 34 88 95
CTE_FLOAT            : 76
CTE_INT              : 75
CTE_STRING           : 33
DIFFERENT            : 51
DIVIDE               : 60
DO                   : 38
ELSE                 : 43
END                  : 1
EQUALS               : 36
FLOAT_TYPE           : 18
GREATER              : 49
ID                   : 1 11 12 27 65 73 77 87
IF                   : 42
INT_TYPE             : 17
LBRACES              : 20 77
LBRACKETS            : 28
LESS                 : 50
LPARENTESIS          : 31 38 42 68 77 92
MAIN                 : 1
MINUS                : 56 72
PLUS                 : 55 71
PRINT                : 31
PROGRAM              : 1
RBRACES              : 20 77
RBRACKETS            : 28
RETURN               : 26
RPARENTESIS          : 31 38 42 68 77 92
SEMICOLON            : 1 10 29 31 36 38 42 77
STRICT_EQUAL         : 52
TIMES                : 59
VAR                  : 9
VOID                 : 79
WHILE                : 38
error                : 

Nonterminals, with rules where they appear

add_current_type     : 77
add_else             : 43
add_endif            : 42
add_function         : 77
add_if               : 42
add_op               : 49 50 51 52 55 56 59 60
add_sub              : 54 55 56
add_to_var_table     : 11 12
add_while            : 38
add_while_false      : 38
add_while_final_s    : 38
argument_list        : 93 95
arguments            : 92
assign               : 30
body                 : 1 38 42 43 90 91
clean_program        : 1
close_paren          : 68
comparison           : 48
condition            : 24
create_dirfunc       : 1
create_id            : 1
cte                  : 64 74
current_type         : 17 18
cycle                : 25
declarations         : 1
else_part            : 42
empty                : 6 8 13 16 22 35 44 53 57 61 67 86 89 94 96
end_func             : 77
exp                  : 48 49 50 51 52
expression           : 26 32 36 38 42 68 93 95
f_call               : 29 66
factor               : 58 59 60
funcs                : 7
funcs_type           : 77
function_block       : 77
functions            : 1 7
generate_assign_quad : 36
grouping             : 62
id_func_option       : 65
id_option            : 27
identifier_list      : 10
identifier_list_tail : 11 12
mult_div             : 58 59 60
parameter            : 85 88
parameter_list       : 85 88
parameters           : 77
prepare_new_func     : 77
print_element        : 31 34
print_element_list   : 31 34
print_func           : 23
program              : 0
push_paren           : 68
start_func_vars      : 77
statement            : 21
statement_list       : 20 21 28
term                 : 54 55 56
type                 : 10 80 87
unary_sign           : 63
value                : 71 72
var_declaration      : 9 15
var_declaration_list : 9 15
vars                 : 5 90

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM create_dirfunc ID create_id SEMICOLON declarations functions MAIN body END clean_program

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . create_dirfunc ID create_id SEMICOLON declarations functions MAIN body END clean_program
    (2) create_dirfunc -> .

    ID              reduce using rule 2 (create_dirfunc -> .)

    create_dirfunc                 shift and go to state 3

state 3

    (1) program -> PROGRAM create_dirfunc . ID create_id SEMICOLON declarations functions MAIN body END clean_program

    ID              shift and go to state 4


state 4

    (1) program -> PROGRAM create_dirfunc ID . create_id SEMICOLON declarations functions MAIN body END clean_program
    (3) create_id -> .

    SEMICOLON       reduce using rule 3 (create_id -> .)

    create_id                      shift and go to state 5

state 5

    (1) program -> PROGRAM create_dirfunc ID create_id . SEMICOLON declarations functions MAIN body END clean_program

    SEMICOLON       shift and go to state 6


state 6

    (1) program -> PROGRAM create_dirfunc ID create_id SEMICOLON . declarations functions MAIN body END clean_program
    (5) declarations -> . vars
    (6) declarations -> . empty
    (9) vars -> . VAR var_declaration var_declaration_list
    (97) empty -> .

    VAR             shift and go to state 10
    MAIN            reduce using rule 97 (empty -> .)
    VOID            reduce using rule 97 (empty -> .)
    INT_TYPE        reduce using rule 97 (empty -> .)
    FLOAT_TYPE      reduce using rule 97 (empty -> .)

    declarations                   shift and go to state 7
    vars                           shift and go to state 8
    empty                          shift and go to state 9

state 7

    (1) program -> PROGRAM create_dirfunc ID create_id SEMICOLON declarations . functions MAIN body END clean_program
    (7) functions -> . funcs functions
    (8) functions -> . empty
    (77) funcs -> . prepare_new_func funcs_type add_current_type ID add_function LPARENTESIS start_func_vars parameters RPARENTESIS LBRACES function_block RBRACES SEMICOLON end_func
    (97) empty -> .
    (78) prepare_new_func -> .

    MAIN            reduce using rule 97 (empty -> .)
    VOID            reduce using rule 78 (prepare_new_func -> .)
    INT_TYPE        reduce using rule 78 (prepare_new_func -> .)
    FLOAT_TYPE      reduce using rule 78 (prepare_new_func -> .)

    functions                      shift and go to state 11
    funcs                          shift and go to state 12
    empty                          shift and go to state 13
    prepare_new_func               shift and go to state 14

state 8

    (5) declarations -> vars .

    MAIN            reduce using rule 5 (declarations -> vars .)
    VOID            reduce using rule 5 (declarations -> vars .)
    INT_TYPE        reduce using rule 5 (declarations -> vars .)
    FLOAT_TYPE      reduce using rule 5 (declarations -> vars .)


state 9

    (6) declarations -> empty .

    MAIN            reduce using rule 6 (declarations -> empty .)
    VOID            reduce using rule 6 (declarations -> empty .)
    INT_TYPE        reduce using rule 6 (declarations -> empty .)
    FLOAT_TYPE      reduce using rule 6 (declarations -> empty .)


state 10

    (9) vars -> VAR . var_declaration var_declaration_list
    (10) var_declaration -> . identifier_list COLON type SEMICOLON
    (11) identifier_list -> . ID add_to_var_table identifier_list_tail

    ID              shift and go to state 17

    var_declaration                shift and go to state 15
    identifier_list                shift and go to state 16

state 11

    (1) program -> PROGRAM create_dirfunc ID create_id SEMICOLON declarations functions . MAIN body END clean_program

    MAIN            shift and go to state 18


state 12

    (7) functions -> funcs . functions
    (7) functions -> . funcs functions
    (8) functions -> . empty
    (77) funcs -> . prepare_new_func funcs_type add_current_type ID add_function LPARENTESIS start_func_vars parameters RPARENTESIS LBRACES function_block RBRACES SEMICOLON end_func
    (97) empty -> .
    (78) prepare_new_func -> .

    MAIN            reduce using rule 97 (empty -> .)
    VOID            reduce using rule 78 (prepare_new_func -> .)
    INT_TYPE        reduce using rule 78 (prepare_new_func -> .)
    FLOAT_TYPE      reduce using rule 78 (prepare_new_func -> .)

    funcs                          shift and go to state 12
    functions                      shift and go to state 19
    empty                          shift and go to state 13
    prepare_new_func               shift and go to state 14

state 13

    (8) functions -> empty .

    MAIN            reduce using rule 8 (functions -> empty .)


state 14

    (77) funcs -> prepare_new_func . funcs_type add_current_type ID add_function LPARENTESIS start_func_vars parameters RPARENTESIS LBRACES function_block RBRACES SEMICOLON end_func
    (79) funcs_type -> . VOID
    (80) funcs_type -> . type
    (17) type -> . INT_TYPE current_type
    (18) type -> . FLOAT_TYPE current_type

    VOID            shift and go to state 21
    INT_TYPE        shift and go to state 23
    FLOAT_TYPE      shift and go to state 24

    funcs_type                     shift and go to state 20
    type                           shift and go to state 22

state 15

    (9) vars -> VAR var_declaration . var_declaration_list
    (15) var_declaration_list -> . var_declaration var_declaration_list
    (16) var_declaration_list -> . empty
    (10) var_declaration -> . identifier_list COLON type SEMICOLON
    (97) empty -> .
    (11) identifier_list -> . ID add_to_var_table identifier_list_tail

    MAIN            reduce using rule 97 (empty -> .)
    VOID            reduce using rule 97 (empty -> .)
    INT_TYPE        reduce using rule 97 (empty -> .)
    FLOAT_TYPE      reduce using rule 97 (empty -> .)
    LBRACES         reduce using rule 97 (empty -> .)
    ID              shift and go to state 17

    var_declaration                shift and go to state 25
    var_declaration_list           shift and go to state 26
    empty                          shift and go to state 27
    identifier_list                shift and go to state 16

state 16

    (10) var_declaration -> identifier_list . COLON type SEMICOLON

    COLON           shift and go to state 28


state 17

    (11) identifier_list -> ID . add_to_var_table identifier_list_tail
    (14) add_to_var_table -> .

    COMMA           reduce using rule 14 (add_to_var_table -> .)
    COLON           reduce using rule 14 (add_to_var_table -> .)

    add_to_var_table               shift and go to state 29

state 18

    (1) program -> PROGRAM create_dirfunc ID create_id SEMICOLON declarations functions MAIN . body END clean_program
    (20) body -> . LBRACES statement_list RBRACES

    LBRACES         shift and go to state 31

    body                           shift and go to state 30

state 19

    (7) functions -> funcs functions .

    MAIN            reduce using rule 7 (functions -> funcs functions .)


state 20

    (77) funcs -> prepare_new_func funcs_type . add_current_type ID add_function LPARENTESIS start_func_vars parameters RPARENTESIS LBRACES function_block RBRACES SEMICOLON end_func
    (81) add_current_type -> .

    ID              reduce using rule 81 (add_current_type -> .)

    add_current_type               shift and go to state 32

state 21

    (79) funcs_type -> VOID .

    ID              reduce using rule 79 (funcs_type -> VOID .)


state 22

    (80) funcs_type -> type .

    ID              reduce using rule 80 (funcs_type -> type .)


state 23

    (17) type -> INT_TYPE . current_type
    (19) current_type -> .

    ID              reduce using rule 19 (current_type -> .)
    SEMICOLON       reduce using rule 19 (current_type -> .)
    COMMA           reduce using rule 19 (current_type -> .)
    RPARENTESIS     reduce using rule 19 (current_type -> .)

    current_type                   shift and go to state 33

state 24

    (18) type -> FLOAT_TYPE . current_type
    (19) current_type -> .

    ID              reduce using rule 19 (current_type -> .)
    SEMICOLON       reduce using rule 19 (current_type -> .)
    COMMA           reduce using rule 19 (current_type -> .)
    RPARENTESIS     reduce using rule 19 (current_type -> .)

    current_type                   shift and go to state 34

state 25

    (15) var_declaration_list -> var_declaration . var_declaration_list
    (15) var_declaration_list -> . var_declaration var_declaration_list
    (16) var_declaration_list -> . empty
    (10) var_declaration -> . identifier_list COLON type SEMICOLON
    (97) empty -> .
    (11) identifier_list -> . ID add_to_var_table identifier_list_tail

    MAIN            reduce using rule 97 (empty -> .)
    VOID            reduce using rule 97 (empty -> .)
    INT_TYPE        reduce using rule 97 (empty -> .)
    FLOAT_TYPE      reduce using rule 97 (empty -> .)
    LBRACES         reduce using rule 97 (empty -> .)
    ID              shift and go to state 17

    var_declaration                shift and go to state 25
    var_declaration_list           shift and go to state 35
    empty                          shift and go to state 27
    identifier_list                shift and go to state 16

state 26

    (9) vars -> VAR var_declaration var_declaration_list .

    MAIN            reduce using rule 9 (vars -> VAR var_declaration var_declaration_list .)
    VOID            reduce using rule 9 (vars -> VAR var_declaration var_declaration_list .)
    INT_TYPE        reduce using rule 9 (vars -> VAR var_declaration var_declaration_list .)
    FLOAT_TYPE      reduce using rule 9 (vars -> VAR var_declaration var_declaration_list .)
    LBRACES         reduce using rule 9 (vars -> VAR var_declaration var_declaration_list .)


state 27

    (16) var_declaration_list -> empty .

    MAIN            reduce using rule 16 (var_declaration_list -> empty .)
    VOID            reduce using rule 16 (var_declaration_list -> empty .)
    INT_TYPE        reduce using rule 16 (var_declaration_list -> empty .)
    FLOAT_TYPE      reduce using rule 16 (var_declaration_list -> empty .)
    LBRACES         reduce using rule 16 (var_declaration_list -> empty .)


state 28

    (10) var_declaration -> identifier_list COLON . type SEMICOLON
    (17) type -> . INT_TYPE current_type
    (18) type -> . FLOAT_TYPE current_type

    INT_TYPE        shift and go to state 23
    FLOAT_TYPE      shift and go to state 24

    type                           shift and go to state 36

state 29

    (11) identifier_list -> ID add_to_var_table . identifier_list_tail
    (12) identifier_list_tail -> . COMMA ID add_to_var_table identifier_list_tail
    (13) identifier_list_tail -> . empty
    (97) empty -> .

    COMMA           shift and go to state 38
    COLON           reduce using rule 97 (empty -> .)

    identifier_list_tail           shift and go to state 37
    empty                          shift and go to state 39

state 30

    (1) program -> PROGRAM create_dirfunc ID create_id SEMICOLON declarations functions MAIN body . END clean_program

    END             shift and go to state 40


state 31

    (20) body -> LBRACES . statement_list RBRACES
    (21) statement_list -> . statement statement_list
    (22) statement_list -> . empty
    (23) statement -> . print_func
    (24) statement -> . condition
    (25) statement -> . cycle
    (26) statement -> . RETURN expression
    (27) statement -> . ID id_option
    (28) statement -> . LBRACKETS statement_list RBRACKETS
    (97) empty -> .
    (31) print_func -> . PRINT LPARENTESIS print_element print_element_list RPARENTESIS SEMICOLON
    (42) condition -> . IF LPARENTESIS expression RPARENTESIS add_if body else_part SEMICOLON add_endif
    (38) cycle -> . WHILE add_while LPARENTESIS expression RPARENTESIS add_while_false DO body SEMICOLON add_while_final_s

    RETURN          shift and go to state 47
    ID              shift and go to state 48
    LBRACKETS       shift and go to state 49
    RBRACES         reduce using rule 97 (empty -> .)
    PRINT           shift and go to state 50
    IF              shift and go to state 51
    WHILE           shift and go to state 52

    statement_list                 shift and go to state 41
    statement                      shift and go to state 42
    empty                          shift and go to state 43
    print_func                     shift and go to state 44
    condition                      shift and go to state 45
    cycle                          shift and go to state 46

state 32

    (77) funcs -> prepare_new_func funcs_type add_current_type . ID add_function LPARENTESIS start_func_vars parameters RPARENTESIS LBRACES function_block RBRACES SEMICOLON end_func

    ID              shift and go to state 53


state 33

    (17) type -> INT_TYPE current_type .

    ID              reduce using rule 17 (type -> INT_TYPE current_type .)
    SEMICOLON       reduce using rule 17 (type -> INT_TYPE current_type .)
    COMMA           reduce using rule 17 (type -> INT_TYPE current_type .)
    RPARENTESIS     reduce using rule 17 (type -> INT_TYPE current_type .)


state 34

    (18) type -> FLOAT_TYPE current_type .

    ID              reduce using rule 18 (type -> FLOAT_TYPE current_type .)
    SEMICOLON       reduce using rule 18 (type -> FLOAT_TYPE current_type .)
    COMMA           reduce using rule 18 (type -> FLOAT_TYPE current_type .)
    RPARENTESIS     reduce using rule 18 (type -> FLOAT_TYPE current_type .)


state 35

    (15) var_declaration_list -> var_declaration var_declaration_list .

    MAIN            reduce using rule 15 (var_declaration_list -> var_declaration var_declaration_list .)
    VOID            reduce using rule 15 (var_declaration_list -> var_declaration var_declaration_list .)
    INT_TYPE        reduce using rule 15 (var_declaration_list -> var_declaration var_declaration_list .)
    FLOAT_TYPE      reduce using rule 15 (var_declaration_list -> var_declaration var_declaration_list .)
    LBRACES         reduce using rule 15 (var_declaration_list -> var_declaration var_declaration_list .)


state 36

    (10) var_declaration -> identifier_list COLON type . SEMICOLON

    SEMICOLON       shift and go to state 54


state 37

    (11) identifier_list -> ID add_to_var_table identifier_list_tail .

    COLON           reduce using rule 11 (identifier_list -> ID add_to_var_table identifier_list_tail .)


state 38

    (12) identifier_list_tail -> COMMA . ID add_to_var_table identifier_list_tail

    ID              shift and go to state 55


state 39

    (13) identifier_list_tail -> empty .

    COLON           reduce using rule 13 (identifier_list_tail -> empty .)


state 40

    (1) program -> PROGRAM create_dirfunc ID create_id SEMICOLON declarations functions MAIN body END . clean_program
    (4) clean_program -> .

    $end            reduce using rule 4 (clean_program -> .)

    clean_program                  shift and go to state 56

state 41

    (20) body -> LBRACES statement_list . RBRACES

    RBRACES         shift and go to state 57


state 42

    (21) statement_list -> statement . statement_list
    (21) statement_list -> . statement statement_list
    (22) statement_list -> . empty
    (23) statement -> . print_func
    (24) statement -> . condition
    (25) statement -> . cycle
    (26) statement -> . RETURN expression
    (27) statement -> . ID id_option
    (28) statement -> . LBRACKETS statement_list RBRACKETS
    (97) empty -> .
    (31) print_func -> . PRINT LPARENTESIS print_element print_element_list RPARENTESIS SEMICOLON
    (42) condition -> . IF LPARENTESIS expression RPARENTESIS add_if body else_part SEMICOLON add_endif
    (38) cycle -> . WHILE add_while LPARENTESIS expression RPARENTESIS add_while_false DO body SEMICOLON add_while_final_s
